# QR-IndoorNav

./: .gitignore  build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/qr_indoornav/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: map.json  map_data.json  room.json
app/src/main/cpp/: CMakeLists.txt  Guidance.cpp  Guidance.h  QRDecoder.cpp  QRDecoder.h  native-lib.cpp
app/src/main/java/com/example/qr_indoornav/: CompassActivity.java  InitialActivity.java  MainActivity.java  MapView.java  NavigationActivity.java  PathFinder.java  ProgressActivity.java  QRParser.java  QRScannerActivity.java  StartActivity.java  StepDetector.java  SuccessActivity.java  TimelineView.java
app/src/main/java/com/example/qr_indoornav/model/: Edge.java  Graph.java  Location.java  MapData.java  Node.java
app/src/main/java/com/example/qr_indoornav/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/animator/: tick_animator.xml
app/src/main/res/drawable/: blue_circle_background.xml  dot_background.xml  ic_animated_tick.xml  ic_tick.xml  progress_ring.xml
app/src/main/res/layout/: activity_compass.xml  activity_main.xml  activity_navigation.xml  activity_progress.xml  activity_qrscanner.xml  activity_start.xml  activity_success.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/test/java/com/example/qr_indoornav/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
opencv/: build.gradle
